--- a/views/index.jade
+++ b/views/index.jade
@@ -63,37 +63,37 @@ block content
 		.myWrapper
 
 
-	.contactUS
-		h1 Contact Us
-			h4 Your input is important to us
-		.myWrapper
-			.col-sm-6
-				form
-					.form-horizontal
-						.form-group
-							label.col-sm-2(for='First Name') First Name:
-							.col-sm-10
-								input#firstname.form-control(type='first name', placeholder='Enter First Name')
-						.form-group
-							label.col-sm-2(for='last name') Last Name:
-							.col-sm-10
-								input#lastname.form-control(type='last name', placeholder='Enter Last Name')
-						.form-group
-							label.col-sm-2(for='email') Email:
-							.col-sm-10
-								input#email.form-control(type='email', placeholder='Enter email')
-						.form-group
-							label.col-sm-2(for='Subject') Subject:
-							.col-sm-10
-								textarea#Subject.form-control(rows='1', placeholder='Enter Subject')
-						.form-group
-							label.col-sm-2(for='comment') Comment:
-							.col-sm-10
-								textarea#comment.form-control(rows='5')
-						button.btn.btn-440w.pull-right(type='submit') Submit
-			.col-sm-6
-				iframe(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.202158741081!2d-75.11247668409956!3d40.11549808182749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b055aa880c67%3A0xdddc30c9cdaf01d7!2sPenn+State+Abington!5e0!3m2!1sen!2sus!4v1458774557448', width='600', height='450', frameborder='0', style='border:0', allowfullscreen='')
-
+	//- .contactUS
+	//- 	h1 Contact Us
+	//- 		h4 Your input is important to us
+	//- 	.myWrapper
+	//- 		.col-sm-6
+	//- 			form
+	//- 				.form-horizontal
+	//- 					.form-group
+	//- 						label.col-sm-2(for='First Name') First Name:
+	//- 						.col-sm-10
+	//- 							input#firstname.form-control(type='first name', placeholder='Enter First Name')
+	//- 					.form-group
+	//- 						label.col-sm-2(for='last name') Last Name:
+	//- 						.col-sm-10
+	//- 							input#lastname.form-control(type='last name', placeholder='Enter Last Name')
+	//- 					.form-group
+	//- 						label.col-sm-2(for='email') Email:
+	//- 						.col-sm-10
+	//- 							input#email.form-control(type='email', placeholder='Enter email')
+	//- 					.form-group
+	//- 						label.col-sm-2(for='Subject') Subject:
+	//- 						.col-sm-10
+	//- 							textarea#Subject.form-control(rows='1', placeholder='Enter Subject')
+	//- 					.form-group
+	//- 						label.col-sm-2(for='comment') Comment:
+	//- 						.col-sm-10
+	//- 							textarea#comment.form-control(rows='5')
+	//- 					button.btn.btn-440w.pull-right(type='submit') Submit
+	//- 		.col-sm-6
+	//- 			iframe(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.202158741081!2d-75.11247668409956!3d40.11549808182749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b055aa880c67%3A0xdddc30c9cdaf01d7!2sPenn+State+Abington!5e0!3m2!1sen!2sus!4v1458774557448', width='600', height='450', frameborder='0', style='border:0', allowfullscreen='')
+	//- 
 
 
 	.footer
