--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
 		link(rel='stylesheet', href='/stylesheets/default.css')
 		link(rel='stylesheet', href='/stylesheets/animate.css')
 		link(rel='stylesheet', href='/stylesheets/webfonts/flaticon.css')
+		meta(name='viewport', content='width=device-width, initial-scale=1')
 
 	body
 		nav
