--- a/views/loggedinlayout.jade
+++ b/views/loggedinlayout.jade
@@ -7,6 +7,7 @@ html(ng-app="clientportal")
 		link(rel='stylesheet', href='/stylesheets/bootstrap-datepicker.css')
 		link(rel='stylesheet', href='/stylesheets/default.css')
 		link(rel='stylesheet', href='/stylesheets/webfonts/flaticon.css')
+		meta(name='viewport', content='width=device-width, initial-scale=1')
 	body(ng-controller="main").swag
 		nav
 			ul.myNav
