Updates testresults cards directive

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -58,7 +58,7 @@ block content
 									.form-group
 										.col-sm-6
 											label.control-label Zip
-											input.form-control(type='text', ng-model="userdata.country")
+											input.form-control(type='text', ng-model="userdata.zip")
 										.col-sm-6
 											label.control-label Phone
 											input.form-control(type='text', ng-model="userdata.phone")
