--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -306,7 +306,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1; }
+  z-index: 3; }
   .myNav a {
     color: white;
     text-decoration: none;
@@ -343,13 +343,13 @@ body {
   margin: auto;
   width: 75%; }
 
-#myHeader {
+#myHeader, #contentTwoLeft, #contentTwoRight, #doctorLeft, #doctorRight, #contactLeft, #contactRight {
   opacity: 0; }
 
 .headerDiv {
   width: 100%;
-  height: 100vh;
-  min-height: 800px;
+  min-height: 100vh;
+  height: auto;
   background: linear-gradient(to bottom right, rgba(0, 47, 75, 0.4), rgba(221, 66, 36, 0.3)), url("../images/Header.jpg") top center fixed;
   background-size: cover;
   padding: 0;
@@ -391,8 +391,6 @@ body {
   height: auto;
   margin: 3% 0px 5% 0px;
   text-shadow: 1px 1px 1px #DEDEDE; }
-  .welcomeContent h1 {
-    text-align: center; }
   .welcomeContent h2 {
     margin: 0; }
     .welcomeContent h2::after {
@@ -408,7 +406,7 @@ body {
   .welcomeContent .myWrapper {
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-content: center;
     align-items: center; }
   .welcomeContent .welcomeInfo {
@@ -496,10 +494,10 @@ body {
       color: white; }
       .contentTwo .myWrapper .divOne p, .contentTwo .myWrapper .divTwo p {
         font-size: 25px;
-        color: black; }
+        color: #333333; }
       .contentTwo .myWrapper .divOne h1, .contentTwo .myWrapper .divTwo h1 {
         text-align: left;
-        color: black; }
+        color: #4a4a4a; }
         .contentTwo .myWrapper .divOne h1::after, .contentTwo .myWrapper .divTwo h1::after {
           content: '';
           display: block;
@@ -516,11 +514,11 @@ body {
       .contentTwo .myWrapper .divOne figure:hover {
         background: url("../images/doc2Hover.png"); }
     .contentTwo .myWrapper .divTwo a {
-      color: black;
+      color: #4D4D4D;
       position: relative;
       margin-top: 40px;
       padding: 12px 40px;
-      border: 2px solid black;
+      border: 2px solid #4D4D4D;
       font-size: 1.2em;
       font-weight: bold;
       transition: 0.5s ease-in-out all; }
@@ -537,32 +535,56 @@ body {
   padding-top: 50px;
   padding-bottom: 50px;
   box-shadow: 0 -1px 20px black, 0 1px 20px black;
-  margin-bottom: 15px; }
+  margin: 3% 0px 5% 0px; }
   .ourTeam h1, .ourTeam h4 {
     color: white; }
   .ourTeam .myWrapper {
-    min-height: 50vh; }
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between; }
+    .ourTeam .myWrapper h2 {
+      margin: 0;
+      color: white; }
+      .ourTeam .myWrapper h2::after {
+        content: '';
+        display: block;
+        height: 3px;
+        width: 10%;
+        padding-top: 20px;
+        margin-bottom: 20px;
+        border-bottom: 3px solid #00B7FF; }
+    .ourTeam .myWrapper p {
+      font-size: 25px; }
+    .ourTeam .myWrapper .divOne {
+      width: 40%; }
+    .ourTeam .myWrapper .divTwo {
+      width: 40%; }
 
 .contactUS {
   background: #fff;
   width: 100%;
-  height: 55vh; }
+  min-height: 55vh;
+  height: auto;
+  margin: 3% 0px 5% 0px; }
   .contactUS h1 {
-    color: black; }
+    color: #4a4a4a; }
   .contactUS h4 {
     margin: 0 0 0.5em; }
   .contactUS .btn-440w {
     margin-right: 0px;
     margin-top: 1em; }
   .contactUS label {
-    color: #35A3C5; }
+    color: #4D4D4D; }
   .contactUS .myWrapper {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-between;
     text-align: center;
-    width: 90%;
+    width: 80%;
     border-top: 9em; }
+    .contactUS .myWrapper .divOne {
+      width: 50%; }
+    .contactUS .myWrapper .divTwo {
+      width: 50%; }
 
 .footer {
   width: 100%;
@@ -595,7 +617,47 @@ body {
     background-position: left top; }
     .headerDiv #myHeader {
       padding: 25px;
-      margin-top: 40%; } }
+      margin-top: 40%; }
+
+  .welcomeContent .myWrapper .welcomeInfo h2 {
+    text-align: center; }
+    .welcomeContent .myWrapper .welcomeInfo h2::after {
+      margin: auto; }
+  .welcomeContent .myWrapper .welcomeInfo p {
+    text-align: center; }
+
+  .contentTwo .myWrapper .divTwo h1 {
+    text-align: center; }
+    .contentTwo .myWrapper .divTwo h1::after {
+      margin: auto; }
+    .contentTwo .myWrapper .divTwo h1 a.btn {
+      text-align: center; }
+
+  .ourTeam {
+    flex-flow: column; }
+    .ourTeam .myWrapper {
+      width: 95%; }
+      .ourTeam .myWrapper .divOne {
+        width: 85%;
+        margin: auto; }
+      .ourTeam .myWrapper .divTwo {
+        width: 85%;
+        margin: auto; }
+      .ourTeam .myWrapper .divOne h2, .ourTeam .myWrapper .divTwo h2 {
+        text-align: center; }
+        .ourTeam .myWrapper .divOne h2::after, .ourTeam .myWrapper .divTwo h2::after {
+          margin: auto; }
+
+  .contactUS .myWrapper {
+    width: 95%; }
+    .contactUS .myWrapper .divOne {
+      display: block;
+      width: 85%;
+      margin: auto; }
+    .contactUS .myWrapper .divTwo {
+      display: none;
+      width: 85%;
+      margin: auto; } }
 @media (max-width: 768px) {
   .firstContent .mainInfo,
   .contentTwo .myWrapper {
