--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -3,13 +3,12 @@ $myparagraph: 25px;
 $myshadow: 1px 1px 1px black;
 $myboxshadow: 0 -1px 20px gray; //0 1px 20px gray; for bottom
 $mySpacing: 50px;
-
 $firstColor: #00B7FF; //light blue
 $secondColor: #4D4D4D; //medium grey
 $thirdColor: #4a4a4a; //dark grey
 $fourthColor: #909090; //light grey
 .nm {
-	margin: 0px !important;
+	margin: 0 !important;
 }
 .mypage {
 	padding: 0;
@@ -30,14 +29,14 @@ $fourthColor: #909090; //light grey
 		text-decoration: none;
 		padding: 0 1em;
 		border-bottom: solid 3px transparent;
-		img.myLogo{
+		img.myLogo {
 			width: 100px;
 			height: 100px;
 			//border-radius: 100%;
 		}
 	}
 	li {
-		margin: 10px 0 0 0;
+		margin: 10px 0 0;
 		list-style-type: none;
 		border-bottom: solid 3px transparent;
 		transition: all 0.4s ease-out;
@@ -60,33 +59,33 @@ $fourthColor: #909090; //light grey
 			//border-bottom: none;
 			border-bottom: solid 3px transparent;
 		}
-		&:last-child{
+		&:last-child {
 			margin-right: 50px;
 		}
 	}
 }
-
 /* underline effect on the nav items */
 /* don't want to underline the logo with blue line*/
-
 .myWrapper {
 	margin: auto;
 	width: 75%;
 	// height: 100%;
 }
 //END myWrapper
-#myHeader, #contentTwoLeft, #contentTwoRight, #doctorLeft, #doctorRight, #contactLeft, #contactRight{
+#contactLeft,
+#contactRight,
+#contentTwoLeft,
+#contentTwoRight,
+#doctorLeft,
+#doctorRight,
+#myHeader {
 	opacity: 0;
 }
 .headerDiv {
 	width: 100%;
 	min-height: 100vh;
 	height: auto;
-	background:
-	linear-gradient(to bottom right,
-	rgba(0, 47, 75, 0.4),
-	rgba(#dd4224, 0.3)),
-	url("../images/Header.jpg") top center fixed;
+	background: linear-gradient(to bottom right, rgba(0, 47, 75, 0.4), rgba(#dd4224, 0.3)), url("../images/Header.jpg") top center fixed;
 	background-size: cover;
 	padding: 0;
 	display: inline-block;
@@ -105,8 +104,8 @@ $fourthColor: #909090; //light grey
 	p {
 		font-size: $myparagraph;
 	}
-	h1{
-		color:white;
+	h1 {
+		color: white;
 		text-align: left;
 	}
 	section a.btn {
@@ -128,29 +127,29 @@ $fourthColor: #909090; //light grey
 	}
 }
 //END HEADER
-.welcomeContent{
+.welcomeContent {
 	width: 100%;
 	background: #fff;
 	min-height: 40vh;
 	height: auto;
-	margin: 3% 0px 5% 0px;
+	margin: 3% 0 5%;
 	text-shadow: 1px 1px 1px #DEDEDE;
-	h2{
+	h2 {
 		margin: 0;
 		&::after {
-		content: '';
-		display: block;
-		height: 3px;
-		width: 10%;
-		padding-top: 20px;
-		margin-bottom: 20px;
-		border-bottom: 3px solid $firstColor;
+			content: '';
+			display: block;
+			height: 3px;
+			width: 10%;
+			padding-top: 20px;
+			margin-bottom: 20px;
+			border-bottom: 3px solid $firstColor;
+		}
 	}
-	}
-	p{
+	p {
 		font-size: $myparagraph;
 	}
-	.myWrapper{
+	.myWrapper {
 		display: flex;
 		flex-flow: row wrap;
 		justify-content: space-between;
@@ -158,144 +157,142 @@ $fourthColor: #909090; //light grey
 		align-items: center;
 		//width: 85%;
 	}
-	.welcomeInfo{
+	.welcomeInfo {
 		width: 30%;
 		height: auto;
 	}
-	.welcomeImage{
+	.welcomeImage {
 		width: 70%;
 		height: auto;
-		img{
+		img {
 			position: relative;
-			width:100%;
+			width: 100%;
 		}
 	}
 }
 //END welcomeContent
-.firstContent{
-	background:
-	linear-gradient(to bottom right,
-	rgba(#360901, 0.8),
-	rgba(0, 47, 75, 0.8)),
-	url("../images/second-min.jpg") top center fixed;
+.firstContent {
+	background: linear-gradient(to bottom right, rgba(#360901, 0.8), rgba(0, 47, 75, 0.8)), url("../images/second-min.jpg") top center fixed;
 	background-size: cover;
-	color:white;
+	color: white;
 	height: auto;
 	min-height: 50vh;
 	width: 100%;
-	padding-top: $mySpacing; padding-bottom: $mySpacing;
+	padding-top: $mySpacing;
+	padding-bottom: $mySpacing;
 	box-shadow: 0 -1px 20px black, 0 1px 20px black;
-	margin-bottom:15px;
+	margin-bottom: 15px;
 	//text-shadow: 1px 1px 1px #DEDEDE;
-	.myWrapper{
-		h1{
+	.myWrapper {
+		h1 {
 			text-align: center;
-			color:white;
-		}
-		h4{
 			color: white;
 		}
-		p{
-			color:white;
+		h4 {
+			color: white;
+		}
+		p {
+			color: white;
 			font-size: $myparagraph;
 			text-shadow: none;
-			span{
-				color:white;
-				font-size:35px;
+			span {
+				color: white;
+				font-size: 35px;
 			}
 		}
 	}
-		.mainInfo {
-			display: flex;
-			justify-content: space-around;
-			align-items: flex-start;
-			flex-flow: row wrap;
-			width: 100%;
-			margin-top: 5%;
-			img {
-				width: 15%;
-			}
-				.mainContent {
-					width: 30%;
-					margin-right: 1%;
-					text-align: center;
-					transition: all 0.5s ease-out;
-					cursor: pointer;
-					p:nth-of-type(1){
-						&::after {
-							content: '';
-							display: block;
-							height: 3px;
-							width: 7%;
-							padding: 20px 0px 0px 0px;
-							margin: auto;
-							border-bottom: 3px solid $firstColor;
-						}
-					}
-					&:hover {
-						//transform: scale(1.05);
-						transition: all 0.2s ease-out;
-						span{
-							color:$firstColor;
-							transition: all .3s ease-out;
-						}
-					}
+	.mainInfo {
+		display: flex;
+		justify-content: space-around;
+		align-items: flex-start;
+		flex-flow: row wrap;
+		width: 100%;
+		margin-top: 5%;
+		img {
+			width: 15%;
+		}
+		.mainContent {
+			width: 30%;
+			margin-right: 1%;
+			text-align: center;
+			transition: all 0.5s ease-out;
+			cursor: pointer;
+			p:nth-of-type(1) {
+				&::after {
+					content: '';
+					display: block;
+					height: 3px;
+					width: 7%;
+					padding: 20px 0 0;
+					margin: auto;
+					border-bottom: 3px solid $firstColor;
 				}
 			}
+			&:hover {
+				//transform: scale(1.05);
+				transition: all 0.2s ease-out;
+				span {
+					color: $firstColor;
+					transition: all 0.3s ease-out;
+				}
+			}
+		}
 	}
+}
 //END firstContent
-.contentTwo{
+.contentTwo {
 	width: 100%;
 	height: auto;
 	min-height: 50vh;
-	display:flex;
+	display: flex;
 	align-content: center;
-	background-color:#fff;
-	color:black;
+	background-color: #fff;
+	color: black;
 	padding-top: $mySpacing/2;
 	padding-bottom: $mySpacing/2;
-	.myWrapper{
+	.myWrapper {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
 		align-items: stretch;
 		align-content: center;
-		.divOne, .divTwo{
+		.divOne,
+		.divTwo {
 			flex-grow: 1;
 			min-height: 200px;
 			width: 50%;
-			color:white;
+			color: white;
 			p {
-			font-size: $myparagraph;
-			color:#333333;
+				font-size: $myparagraph;
+				color: #333333;
 			}
-			h1{
+			h1 {
 				text-align: left;
 				color: #4a4a4a;
 				&::after {
-				content: '';
-				display: block;
-				height: 3px;
-				width: 10%;
-				padding-top: 20px;
-				border-bottom: 3px solid $firstColor;
+					content: '';
+					display: block;
+					height: 3px;
+					width: 10%;
+					padding-top: 20px;
+					border-bottom: 3px solid $firstColor;
+				}
+			}
 		}
-		}
-	}
-		.divOne{
+		.divOne {
 			figure {
 				background: url("../images/doc2.png");
 				width: 436px;
 				height: 572px;
 				position: relative;
 				margin: auto;
-				&:hover{
+				&:hover {
 					background: url("../images/doc2Hover.png");
 				}
 			}
 		}
-		.divTwo{
-			a{
+		.divTwo {
+			a {
 				color: #4D4D4D;
 				position: relative;
 				margin-top: 40px;
@@ -308,61 +305,59 @@ $fourthColor: #909090; //light grey
 					top: 3px;
 				}
 			}
-			}
-		.divThree{
+		}
+		.divThree {
 			// background: green;
-			}
-		.divFour{
+		}
+		.divFour {
 			// background: black;
-			}
 		}
 	}
+}
 //END contentTwo
-.ourTeam{
-	background:
-	linear-gradient(to bottom right,
-	rgba(0, 47, 75, 0.8),
-	rgba(#360901, 0.8)),
-	url("../images/third-min.jpg") center fixed;
+.ourTeam {
+	background: linear-gradient(to bottom right, rgba(0, 47, 75, 0.8), rgba(#360901, 0.8)), url("../images/third-min.jpg") center fixed;
 	background-size: cover;
-	color:white;
+	color: white;
 	height: auto;
 	min-height: 50vh;
 	width: 100%;
-	padding-top: $mySpacing; padding-bottom: $mySpacing;
+	padding-top: $mySpacing;
+	padding-bottom: $mySpacing;
 	box-shadow: 0 -1px 20px black, 0 1px 20px black;
 	//text-shadow: 1px 1px 1px rgba(#000000, 0.6);
-	margin: 3% 0px 5% 0px;
-	h1, h4{
-		color:white;
+	margin: 3% 0 5%;
+	h1,
+	h4 {
+		color: white;
 	}
-	.myWrapper{
+	.myWrapper {
 		display: flex;
 		flex-flow: row wrap;
 		justify-content: space-between;
 		// align-content: center;
 		// align-items: center;
-		h2{
+		h2 {
 			margin: 0;
-			color:white;
+			color: white;
 			&::after {
-			content: '';
-			display: block;
-			height: 3px;
-			width: 10%;
-			padding-top: 20px;
-			margin-bottom: 20px;
-			border-bottom: 3px solid $firstColor;
+				content: '';
+				display: block;
+				height: 3px;
+				width: 10%;
+				padding-top: 20px;
+				margin-bottom: 20px;
+				border-bottom: 3px solid $firstColor;
+			}
 		}
-		}
-		p{
+		p {
 			font-size: $myparagraph;
 		}
-		.divOne{
-			width:40%;
+		.divOne {
+			width: 40%;
 		}
-		.divTwo{
-			width:40%;
+		.divTwo {
+			width: 40%;
 		}
 	}
 }
@@ -372,15 +367,15 @@ $fourthColor: #909090; //light grey
 	width: 100%;
 	min-height: 55vh;
 	height: auto;
-	margin: 3% 0px 5% 0px;
-	h1{
-		color:$thirdColor;
+	margin: 3% 0 5%;
+	h1 {
+		color: $thirdColor;
 	}
 	h4 {
 		margin: 0 0 0.5em;
 	}
 	.btn-440w {
-		margin-right: 0px;
+		margin-right: 0;
 		margin-top: 1em;
 	}
 	label {
@@ -392,12 +387,12 @@ $fourthColor: #909090; //light grey
 		//align-items: center;
 		text-align: center;
 		width: 80%;
-		border-top:9em;
-		.divOne{
-			width:50%;
+		border-top: 9em;
+		.divOne {
+			width: 50%;
 		}
-		.divTwo{
-			width:50%;
+		.divTwo {
+			width: 50%;
 		}
 	}
 }
@@ -410,12 +405,12 @@ $fourthColor: #909090; //light grey
 	color: $fourthColor;
 	background-size: cover;
 	box-shadow: 0 -1px 20px black;
-	.myWrapper{
+	.myWrapper {
 		display: flex;
 		align-items: center;
 		justify-content: flex-start;
 	}
-	section{
+	section {
 		position: relative;
 		text-align: left;
 		width: 25%;
@@ -424,17 +419,15 @@ $fourthColor: #909090; //light grey
 }
 //END footer 320
 @media (max-width: 768px) {
-
-	.col-sm-3{
+	.col-sm-3 {
 		width: 100%;
 	}
-	.col-sm-2{
-		padding-right:7px;
+	.col-sm-2 {
+		padding-right: 7px;
 		padding-left: 7px;
 	}
-
-	.firstContent .mainInfo,
-	.contentTwo .myWrapper {
+	.contentTwo .myWrapper,
+	.firstContent .mainInfo {
 		flex-flow: column;
 		-webkit-flex-flow: column;
 		justify-content: center;
@@ -446,7 +439,7 @@ $fourthColor: #909090; //light grey
 	.secondDiv {
 		width: 100%;
 	}
-	.mainContent{
+	.mainContent {
 		padding-top: 20px;
 	}
 	.headerDiv section {
@@ -456,180 +449,188 @@ $fourthColor: #909090; //light grey
 		left: 0;
 		top: 0;
 		text-align: center;
-		h1{
+		h1 {
 			font-size: 35px;
 			text-align: center;
 		}
 	}
-	.welcomeContent{
-		.myWrapper{
+	.welcomeContent {
+		.myWrapper {
 			width: 95%;
-			.welcomeInfo{
-				width:75%;
-				margin:auto;
+			.welcomeInfo {
+				width: 75%;
+				margin: auto;
 			}
-			.welcomeImage{
+			.welcomeImage {
 				margin: auto;
 			}
 		}
 	}
-	.firstContent{
-		.mainInfo{
-		.mainContent{
-			width: 60%;
-		}
-	}
-	}
-	.contentTwo{
-		.myWrapper{
-		.divOne{
-			display:none;
-		}
-		.divTwo{
-			width: 75%;
-			a.btn{
-				text-align: center;
-				margin: auto;
-				position: relative;
+	.firstContent {
+		.mainInfo {
+			.mainContent {
+				width: 60%;
 			}
 		}
 	}
-
+	.contentTwo {
+		.myWrapper {
+			.divOne {
+				display: none;
+			}
+			.divTwo {
+				width: 75%;
+				a.btn {
+					text-align: center;
+					margin: auto;
+					position: relative;
+				}
+			}
+		}
 	}
-	.ourTeam{
-		.myWrapper{
+	.ourTeam {
+		.myWrapper {
 			width: 95%;
-			.divOne, .divTwo{
-				margin: 3% 0% 3% 0%;
+			.divOne,
+			.divTwo {
+				margin: 3% 0;
 			}
 		}
 	}
-	.contactUS{
-		.myWrapper{
+	.contactUS {
+		.myWrapper {
 			width: 95%;
 			justify-content: space-between;
 			margin: auto;
-			.divOne{
+			.divOne {
 				width: 32%;
 			}
-			.divTwo{
+			.divTwo {
 				width: 68%;
 			}
 		}
 	}
-	.col-sm-3{
+	.col-sm-3 {
 		width: 33%;
 	}
-	.displayCard{
-	.displayContainer{
-		height:365px;
+	.displayCard {
+		.displayContainer {
+			height: 365px;
+		}
 	}
 }
+
+
+@media (max-width: 1024px) {
+	.displayCard {
+		.displayContainer{
+			min-height: 385px;
+		}
+	}
 }
 
 @media (max-width: 425px) {
-	.col-sm-3{
+	.col-sm-3 {
 		width: 100%;
 	}
 	.nav-pills > li > a {
 		text-align: center;
 	}
-	nav{
- .myNav{
-	 padding: 0px;
-	 margin: 0px;
-	 li:last-child {
-    margin-right: 0px;
-	}
-	 a{
-		 padding-left: 4px;
-	 }
- }
-}
-.headerDiv{
-	min-height: 100vh;
-	background-position: left top;
-	#myHeader{
-	padding:25px;
-	margin-top: 40%;
-	}
-}
-.welcomeContent{
-	.myWrapper{
-		.welcomeInfo{
-			h2{
-				text-align: center;
-				&::after {
-					margin: auto;
+	nav {
+		.myNav {
+			padding: 0;
+			margin: 0;
+			li:last-child {
+				margin-right: 0;
 			}
-			}
-			p{
-				text-align: center;
-			}
-}
-}
-}
-.contentTwo{
-	.myWrapper{
-		.divTwo{
-			h1{
-				text-align: center;
-				&::after {
-					margin: auto;
-			}
-			a.btn{
-				text-align: center;
-			}
+			a {
+				padding-left: 4px;
 			}
 		}
 	}
-}
-.ourTeam{
-	flex-flow: column;
-	.myWrapper{
-		width: 95%;
-		.divOne{
-			width:85%;
-		}
-		.divTwo{
-			width:85%;
-		}
-		.divOne, .divTwo{
-			margin: auto !important;
-			h2{
-				text-align: center;
-				&::after {
-					margin: auto;
-			}
-		}
+	.headerDiv {
+		min-height: 100vh;
+		background-position: left top;
+		#myHeader {
+			padding: 25px;
+			margin-top: 40%;
 		}
 	}
-}
-.contactUS{
-		.myWrapper{
-			#contactLeft{
-				width:75%;
-				margin:auto;
-			}
-			.divTwo{
-				display:none;
+	.welcomeContent {
+		.myWrapper {
+			.welcomeInfo {
+				h2 {
+					text-align: center;
+					&::after {
+						margin: auto;
+					}
+				}
+				p {
+					text-align: center;
+				}
 			}
 		}
 	}
+	.contentTwo {
+		.myWrapper {
+			.divTwo {
+				h1 {
+					text-align: center;
+					&::after {
+						margin: auto;
+					}
+					a.btn {
+						text-align: center;
+					}
+				}
+			}
+		}
+	}
+	.ourTeam {
+		flex-flow: column;
+		.myWrapper {
+			width: 95%;
+			.divOne {
+				width: 85%;
+			}
+			.divTwo {
+				width: 85%;
+			}
+			.divOne,
+			.divTwo {
+				margin: auto !important;
+				h2 {
+					text-align: center;
+					&::after {
+						margin: auto;
+					}
+				}
+			}
+		}
+	}
+	.contactUS {
+		.myWrapper {
+			#contactLeft {
+				width: 75%;
+				margin: auto;
+			}
+			.divTwo {
+				display: none;
+			}
+		}
+	}
 }
-
-
 @media print {
-	.myNav{
-		display:none;
+	.myNav {
+		display: none;
 	}
-	ul.nav.nav-pills.nav-stacked{
-		display:none;
+	ul.nav.nav-pills.nav-stacked {
+		display: none;
 	}
-	.col-sm-10{
+	.col-sm-10 {
 		width: 100%;
 	}
-	.col-sm-3{
-		width:20%;
+	.col-sm-3 {
+		width: 20%;
 	}
 }
